--- a/src/main/resources/public/admin/index.html
+++ b/src/main/resources/public/admin/index.html
@@ -28,8 +28,8 @@
 					<el-dropdown-menu slot="dropdown">
 						<!--<el-dropdown-item>我的消息</el-dropdown-item>
 						<el-dropdown-item>设置</el-dropdown-item>-->
-						<!-- <el-dropdown-item><i class="fa fa-address-card fa-fw"></i>&nbsp; 个人信息</el-dropdown-item>
-						<el-dropdown-item @click.native="handlepwdChange"><i class="fa fa-key fa-fw"></i>&nbsp; 修改密码</el-dropdown-item> -->
+						<!-- <el-dropdown-item><i class="fa fa-address-card fa-fw"></i>&nbsp; 个人信息</el-dropdown-item> -->
+						<el-dropdown-item @click.native="handlepwdChange"><i class="fa fa-key fa-fw"></i>&nbsp; 修改密码</el-dropdown-item>
 						<el-dropdown-item @click.native="logout"><i class="fa fa-power-off fa-fw"></i>&nbsp; 退出登录</el-dropdown-item>
 					</el-dropdown-menu>
 				</el-dropdown>
