--- a/src/main/resources/public/admin/news.html
+++ b/src/main/resources/public/admin/news.html
@@ -42,15 +42,14 @@
 				<el-form :inline="true" :model="filters" style="float: right;">
 					<el-form-item>
 						<el-select v-model="filters.type" placeholder="请选择分类">
-							<el-option label="全部" :value="0">
-						    </el-option>
+							<el-option label="全部" :value="0"></el-option>
 						    <el-option
 						      v-for="item in typeOptions"
 						      :key="item.pid"
 						      :label="item.name"
 						      :value="item.pid">
 						    </el-option>
-					 </el-select>
+					 	</el-select>
 					</el-form-item>
 					<el-form-item>
 						<el-button type="primary" @click="getList">查询</el-button>
