--- a/src/main/resources/public/admin/contact.html
+++ b/src/main/resources/public/admin/contact.html
@@ -157,12 +157,12 @@
 				<el-form-item label="网页代码" prop="wjs">
 					<el-input type="textarea" v-model="addForm.wjs" :rows="6"></el-input>
 				</el-form-item>
-				<el-form-item label="iphone代码" prop="ijs">
+				<!-- <el-form-item label="iphone代码" prop="ijs">
 					<el-input type="textarea" v-model="addForm.ijs" :rows="6"></el-input>
 				</el-form-item>
 				<el-form-item label="android代码" prop="ajs">
 					<el-input type="textarea" v-model="addForm.ajs" :rows="6"></el-input>
-				</el-form-item>
+				</el-form-item> -->
 			</el-form>
 			<div slot="footer" class="dialog-footer">
 				<el-button @click="addClose">取消</el-button>
@@ -218,12 +218,12 @@
 				<el-form-item label="网页代码" prop="wjs">
 					<el-input type="textarea" v-model="editForm.wjs" :rows="6"></el-input>
 				</el-form-item>
-				<el-form-item label="iphone代码" prop="ijs">
+				<!-- <el-form-item label="iphone代码" prop="ijs">
 					<el-input type="textarea" v-model="editForm.ijs" :rows="6"></el-input>
 				</el-form-item>
 				<el-form-item label="android代码" prop="ajs">
 					<el-input type="textarea" v-model="editForm.ajs" :rows="6"></el-input>
-				</el-form-item>
+				</el-form-item> -->
 			</el-form>
 			<div slot="footer" class="dialog-footer">
 				<el-button @click="editClose">取消</el-button>
@@ -263,12 +263,12 @@
 				<el-form-item label="网页代码" prop="wjs">
 					<pre>{{viewForm.wjs}}</pre>
 				</el-form-item>
-				<el-form-item label="iphone代码" prop="ijs">
+				<!-- <el-form-item label="iphone代码" prop="ijs">
 					<pre>{{viewForm.ijs}}</pre>
 				</el-form-item>
 				<el-form-item label="android代码" prop="ajs">
 					<pre>{{viewForm.ajs}}</pre>
-				</el-form-item>
+				</el-form-item> -->
 			</el-form>
 			<div slot="footer" class="dialog-footer">
 				<el-button @click="viewFormVisible = false">关闭</el-button>
